# wms

./: .gitignore  README.md  category.Json  pom.xml  用户数据隔离实施计划.md  用户数据隔离实施计划_rust.md  用户数据隔离开发方案.md  用户数据隔离测试方案.md
favorite-follower/: pom.xml
general-social/: pom.xml
product/: .gitignore  pom.xml  product.json
sb-feedback/: pom.xml
sb-file-service/: pom.xml
sb-form-attachment/: pom.xml
sb-log/: pom.xml
sb-notice/: pom.xml
sb-notification/: pom.xml
sb-organization/: pom.xml
sb-pcd/: pom.xml
sb-profile/: pom.xml
sb-score/: README.md  pom.xml
sb-starter-test/: pom.xml
sb-state/: README.md  pom.xml
sb-statement/: pom.xml
wms-rust/: .env.example  API.md  Cargo.toml  README.md
wms-rust/docs/: WMS_SOLUTION_ARCHITECTURE.md
wms-rust/sql/: 01_schema.sql  02_indexes.sql  03_seed.sql
wms-rust/src/: lib.rs  main.rs
wms-rust/src/config/: mod.rs
wms-rust/src/docs/: mod.rs
wms-rust/src/domain/: mod.rs  tenant.rs
wms-rust/src/error/: mod.rs
wms-rust/src/handlers/: mod.rs  product.rs  sku.rs  storage.rs  warehouse.rs
wms-rust/src/infrastructure/: app_state.rs  database.rs  mod.rs  tenant_sdk.rs
wms-rust/src/middleware/: mod.rs  tenant.rs
wms-rust/src/models/: base.rs  inventory.rs  mod.rs  product.rs  sku.rs  warehouse.rs
wms-rust/src/models/dto/: mod.rs  sku.rs  storage.rs  warehouse.rs
wms-rust/src/models/entity/: mod.rs  product.rs  sku.rs  storage.rs  warehouse.rs
wms-rust/src/services/: mod.rs  product_service.rs  sku_service.rs  storage_service.rs  warehouse_service.rs
wms-rust/src/utils/: mod.rs
wms-rust/tests/: tenant_context_test.rs  tenant_sdk_test.rs
wms-rust/tests/common/: mod.rs
(+1882 files in other folders)
